Prueba Ocultar API KEY

--- a/.env
+++ b/.env
@@ -19,7 +19,10 @@
 #--------------------------------------------------------------------
 # APP
 #--------------------------------------------------------------------
-
+ RAWG_API_KEY=a9a117515a694c0fa91d404dd5ede441
+ CLOUDINARY_CLOUD_NAME=mbersan1005
+ CLOUDINARY_API_KEY=246324721933957
+ CLOUDINARY_API_SECRET=Ojh3Chu7gOvYJbwzWB-u0jmXF7U
 # app.baseURL = ''
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
